--- a/src/components/card-item/card-item.styles.scss
+++ b/src/components/card-item/card-item.styles.scss
@@ -1,9 +1,20 @@
+@keyframes fade-in {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
 .card {
   width: 240px;
   height: 240px;
   overflow: hidden;
   transition: transform 0.7s ease-in-out;
   cursor: pointer;
+
+  animation: fade-in 1.2s cubic-bezier(0.39, 0.575, 0.565, 1) both;
 
   &:hover {
     transform: rotate(5deg);
